Bug 112405 - [CI][BAT] igt@i915_selftest@live_gt_heartbeat - dmesg-fail - live_idle_pulse failed with error -62
Summary: [CI][BAT] igt@i915_selftest@live_gt_heartbeat - dmesg-fail - live_idle_pulse ...
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: not set not set
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 112415 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-27 08:54 UTC by Lakshmi
Modified: 2019-11-29 14:41 UTC (History)
1 user (show)

See Also:
i915 platform: BXT, CFL, CML, GLK, ICL, KBL, SKL
i915 features: GEM/Other


Attachments

Description Lakshmi 2019-11-27 08:54:24 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7427/fi-apl-guc/igt@i915_selftest@live_gt_heartbeat.html
i915_selftest:5747) igt_kmod-WARNING: i915: probe of 0000:00:02.0 failed with error -62
(i915_selftest:5747) igt_kmod-CRITICAL: Test assertion failure function igt_kselftest_execute, file ../lib/igt_kmod.c:588:
(i915_selftest:5747) igt_kmod-CRITICAL: Failed assertion: err == 0
(i915_selftest:5747) igt_kmod-CRITICAL: kselftest "i915 igt__21__live_gt_heartbeat=1 live_selftests=-1 disable_display=1 st_filter=" failed: Timer expired [62]
(i915_selftest:5747) igt_core-INFO: Stack trace:
(i915_selftest:5747) igt_core-INFO:   #0 ../lib/igt_core.c:1830 __igt_fail_assert()
(i915_selftest:5747) igt_core-INFO:   #1 [igt_kselftest_execute+0x2e5]
(i915_selftest:5747) igt_core-INFO:   #2 ../lib/igt_kmod.c:622 igt_kselftests()
(i915_selftest:5747) igt_core-INFO:   #3 /usr/include/x86_64-linux-gnu/bits/stdio2.h:64 __real_main29()
(i915_selftest:5747) igt_core-INFO:   #4 ../tests/i915/i915_selftest.c:29 main()
(i915_selftest:5747) igt_core-INFO:   #5 ../csu/libc-start.c:344 __libc_start_main()
(i915_selftest:5747) igt_core-INFO:   #6 [_start+0x2a]
****  END  ****
Subtest live_gt_heartbeat: FAIL (1.446s)
Comment 1 Chris Wilson 2019-11-27 08:58:39 UTC
The error codes here (selftests) are usually indicative of distinct classes of errors, so be precise and merge later if needed.
Comment 3 Lakshmi 2019-11-27 09:03:02 UTC
(In reply to Chris Wilson from comment #1)
> The error codes here (selftests) are usually indicative of distinct classes
> of errors, so be precise and merge later if needed.

Ok, Thanks for the explanation. I will create a separate issue for this failure 
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7427/fi-skl-lmem/igt@i915_selftest@live_gt_heartbeat.html
(i915_selftest:4639) igt_kmod-WARNING: i915/intel_heartbeat_live_selftests: live_idle_pulse failed with error -22
(i915_selftest:4639) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling power well 2
(i915_selftest:4639) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI A/E IO power well
(i915_selftest:4639) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI B IO power well
(i915_selftest:4639) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI C IO power well
(i915_selftest:4639) igt_kmod-WARNING: [drm:intel_power_well_enable [i915]] enabling DDI D IO power well
(i915_selftest:4639) igt_kmod-WARNING: i915: probe of 0000:00:02.0 failed with error -22
(i915_selftest:4639) igt_kmod-CRITICAL: Test assertion failure function igt_kselftest_execute, file ../lib/igt_kmod.c:588:
(i915_selftest:4639) igt_kmod-CRITICAL: Failed assertion: err == 0
(i915_selftest:4639) igt_kmod-CRITICAL: kselftest "i915 igt__21__live_gt_heartbeat=1 live_selftests=-1 disable_display=1 st_filter=" failed: Invalid argument [22]
Subtest live_gt_heartbeat failed.
Comment 4 CI Bug Log 2019-11-27 09:04:52 UTC
A CI Bug Log filter associated to this bug has been updated:

{- APL BXT SKL KBL CFL CML ICL: igt@i915_selftest@live_gt_heartbeat - dmesg-fail - live_idle_pulse failed with error -\d+ -}
{+ APL BXT SKL KBL CFL CML ICL: igt@i915_selftest@live_gt_heartbeat - dmesg-fail - live_idle_pulse failed with error -62 +}


  No new failures caught with the new filter
Comment 5 Chris Wilson 2019-11-27 16:13:34 UTC
*** Bug 112415 has been marked as a duplicate of this bug. ***
Comment 6 Chris Wilson 2019-11-27 16:56:13 UTC
The issue with the pulse timeouts seem to be some slight delay in submitting the requests. On the surface a minor worry, but we should get to the bottom of any submission delay as they our one of our key performance indicators.
Comment 8 CI Bug Log 2019-11-29 12:40:06 UTC
A CI Bug Log filter associated to this bug has been updated:

{- BSW SKL KBL GLK: igt@i915_selftest@live_gt_heartbeat - dmesg-fail - live_idle_flush failed with error -62 -}
{+ APL BSW SKL KBL GLK: igt@i915_selftest@live_gt_heartbeat - dmesg-fail - live_idle_flush failed with error -62 +}

New failures caught by the filter:

  * https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7435/shard-apl7/igt@i915_selftest@live_gt_heartbeat.html
Comment 9 Chris Wilson 2019-11-29 14:41:58 UTC
commit 0cb7da1062f44281f0a8c5a137b1c9af91b6bfd5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Nov 29 10:34:55 2019 +0000

    drm/i915/selftests: Wait only on the expected barrier
    
    Wait on only the last request on the kernel_context after emitting a
    barrier so that we do not wait for everything in general and by doing so
    cause an accidental emission of the barrier!
    
    Bugzilla; https://bugs.freedesktop.org/show_bug.cgi?id=112405
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Reviewed-by: Tvrtko Ursulin <tvrtko.ursulin@intel.com>
    Link: https://patchwork.freedesktop.org/patch/msgid/20191129103455.744389-1-chris@chris-wilson.co.uk


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.